# gdoc-to-medium

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: PLAYWRIGHT_SETUP.md  SCHEDULING.md  SETUP.md
scripts/: register_task.ps1  run.cmd
src/gdoc_to_medium/: __main__.py  cli.py  config.py  converter.py  drive_client.py  image_source.py  logging_setup.py  orchestrator.py  types.py
src/gdoc_to_medium/medium/: __init__.py  markdown_html.py  playwright_backend.py  selectors.py  session.py  token_backend.py
tests/: _playwright_fakes.py  test_backend_selection.py  test_cli_dryrun.py  test_config.py  test_converter_blocks.py  test_converter_code.py  test_converter_degradation.py  test_converter_images.py  test_converter_inline.py  test_converter_lists.py  test_converter_metadata.py  test_drive_client_auth.py  test_drive_client_read.py  test_drive_client_write.py  test_fixtures_load.py  test_image_source.py  test_logging_setup.py  test_markdown_html.py  test_orchestrator_errors.py  test_orchestrator_flow.py  test_orchestrator_images.py  test_playwright_backend.py  test_playwright_backend_post.py  test_smoke.py  test_token_backend_auth.py  test_token_backend_image.py  test_token_backend_post.py  test_token_backend_security.py
tests/fixtures/: README.md
tests/fixtures/docs/: code.json  combined.json  empty.json  gappy.json  images.json  inline_styles.json  lists.json  metadata.json  metadata_minimal.json  nested_list.json  nested_ordered_list.json  out_of_scope_blockquote.json  out_of_scope_columns.json  out_of_scope_footnote.json  (+3 more)
