[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gdoc-to-medium"
version = "0.1.0"
description = "Convert a Google Doc into a Medium draft, driven by Drive folder state."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "httpx>=0.27",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
